--- a/app/package.json
+++ b/app/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-phone-number-input": "^3.3.7"
+    "react-phone-number-input": "^3.3.7",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
