--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
