--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
     "@vercel/speed-insights": "^1.0.0",
     "next": "14.0.3",
     "react": "^18",
