--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@vercel/speed-insights": "^1.0.0",
+    "axios": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
@@ -23,6 +25,7 @@
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
