--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.20",
     "@vercel/speed-insights": "^1.0.0",
     "axios": "^1.6.7",
+    "cookies-next": "^4.1.1",
     "date-fns-timezone": "^0.1.4",
     "next": "14.0.3",
     "next-pwa": "^5.6.0",
