--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.7",
     "cookies-next": "^4.1.1",
     "date-fns-timezone": "^0.1.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "next-pwa": "^5.6.0",
     "react": "^18",
