--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
-    "@vercel/speed-insights": "^1.0.0",
+    "@next/third-parties": "^14.1.3",
     "axios": "^1.6.7",
     "date-fns-timezone": "^0.1.4",
     "next": "14.0.3",
