--- a/api/package.json
+++ b/api/package.json
@@ -1,9 +1,17 @@
 {
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "tsc"
+  },
   "dependencies": {
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
     "express": "^4.18.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
