--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
-      "outDir": "./dist",
+      "outDir": "./build",
       "strict": true
     },
     "include": ["src/**/*.ts"]
