--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,6 +5,6 @@
       "outDir": "./build",
       "strict": true
     },
-    "include": ["src/**/*.ts"]
+    "include": ["src/**/*.ts", "app.ts"]
   }
   
