--- a/api/package.json
+++ b/api/package.json
@@ -1,17 +1,18 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node build/app.js",
-    "dev": "nodemon app.ts",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
+    "@netlify/functions": "^2.6.0",
     "@types/express": "^4.17.21",
-    "axios": "^1.6.7",
     "express": "^4.18.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "serverless-http": "^3.2.0"
   }
 }
