--- a/api/netlify.toml
+++ b/api/netlify.toml
@@ -1,8 +1,14 @@
 [functions]
-  external_node_modules = ["express"]
-  node_bundler = "esbuild"
+ external_node_modules = ["express"]
+ node_bundler = "esbuild"
+
 [[redirects]]
-  force = true
-  from = "/api/*"
-  status = 200
-  to = "/.netlify/functions/api/:splat"
+ force = true
+ from = "/api/*"
+ status = 200
+ to = "/.netlify/functions/api/:splat"
+
+[[headers]]
+ for = "/*"
+ [headers.values]
+    Access-Control-Allow-Origin = "https://bereal-fhdev.vercel.app"
