--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@netlify/functions": "^2.6.0",
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "serverless-http": "^3.2.0"
   }
