--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.18",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
     "@next/third-parties": "^14.1.3",
     "accept-language": "^3.0.18",
     "axios": "^1.6.7",
@@ -21,13 +17,16 @@
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
+    "install": "^0.13.0",
     "next": "14.0.3",
     "next-pwa": "^5.6.0",
+    "npm": "^10.5.0",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-i18next": "^14.1.0",
+    "react-icons": "^5.0.1",
     "react-phone-number-input": "^3.3.7",
     "react-swipeable": "^7.0.1",
     "react-swipeable-views": "^0.14.0",
