--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@next/third-parties": "^14.1.3",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "accept-language": "^3.0.18",
     "axios": "^1.6.7",
     "date-fns-timezone": "^0.1.4",
