--- a/package.json
+++ b/package.json
@@ -1,24 +1,53 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "the api behind befake client",
-  "main": "index.js",
+  "name": "app",
+  "version": "2.2",
+  "private": true,
   "scripts": {
-    "dev": "netlify dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "license": "MIT",
   "dependencies": {
-    "@netlify/functions": "^2.6.0",
-    "@types/express": "^4.17.21",
+    "@blazity/next-image-proxy": "^1.0.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@next/third-parties": "^14.1.3",
+    "accept-language": "^3.0.18",
     "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "moment": "^2.30.1",
-    "serverless-http": "^3.2.0",
-    "sharp": "^0.33.3",
-    "xmldom": "^0.6.0"
+    "date-fns-timezone": "^0.1.4",
+    "http-proxy-middleware": "^2.0.6",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
+    "leaflet": "^1.9.4",
+    "next": "14.0.3",
+    "next-pwa": "^5.6.0",
+    "react": "^18",
+    "react-cookie": "^7.1.0",
+    "react-dom": "^18",
+    "react-draggable": "^4.4.6",
+    "react-i18next": "^14.1.0",
+    "react-leaflet": "^4.2.1",
+    "react-phone-number-input": "^3.3.7",
+    "react-swipeable": "^7.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "react-toastify": "^10.0.4",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17"
+    "@types/leaflet": "^1.9.8",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-swipeable-views": "^0.13.5",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
