--- a/app/.env.local
+++ b/app/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_DOMAIN=https://befakeapi.netlify.app
-NEXT_PUBLIC_DEV_DOMAIN=http://localhost:8888
+NEXT_PUBLIC_DEV_DOMAIN=http://192.168.1.49:8888
 NEXT_PUBLIC_VERSION=2.2
